# epoch-lunar.github.io

./: .gitignore  CLAUDE.md  README.md  RUNBOOK.md  TODO.md  index.html  script.js  styles.css  time_diagnostics.py  wrangler.jsonc  wrangler.toml
.github/workflows/: deploy-frontend.yml  deploy-staging.yml  deploy-worker.yml  test.yml
backend/: Cargo.toml  package-lock.json  package.json  wrangler.toml
backend/src/: lib.rs
backend/tests/: time-scales.js  time-scales.test.js
docs/: architecture.md  brand.md  color-palette.html  ecosystem.md  roadmap.md
frontend/: index.html  script.js  styles.css  time-scales.js
frontend/prototypes/: README.md  crt-oscilloscope.html  crt-shader-distort.html  dash-lunar-sync.html  dashboard-knobs-buttons.html  index.html  indicator-lights.html  mfd-a10c-demo.html  segments-odometer.html  tektronix-encoder-knobs.html  vfd-column-meter.html
frontend/prototypes/lib/: celestial-emoji.js
