[package]
name = "epoch-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.7"
js-sys = "0.3"
serde_json = "1"
# web-time feature swaps std::time for web_sys::Performance in wasm32 targets
hifitime = { version = "4", features = ["web-time"] }

[profile.release]
opt-level = "s"
